2012-07-11	Santiago Munin <burning1@gmail.com>
	* src/es/udc/santiago/model/facade/CashFlow.java: Changed clone() method, now dates are cloned too.
	* src/es/udc/santiago/model/facade/CashFlowService.java: getAllWithFilter() now clones the received date because it will change its value.
	* src/es/udc/santiago/model/util/ModelUtilities.java: Fixed a null-pointer bug.
	* test/es/udc/santiago/test/CashFlowServiceTest.java: Added new values and tests.

2012-07-09	Santiago Munin <burning1@gmail.com>
	* res/values-es/arrays.xml, 
	  res/values-es/strings.xml: Spanish language.
	* res/layout/add_operation.xml: UI changes.
	* res/layout/movements_overview.xml: Id changed.
	* res/values-es/arrays.xml,
	  res/values/arrays.xml: Added GBP currency.
	* res/values/strings.xml: Few changes.
	* src/es/udc/santiago/model/facade/CashFlow.java: Added clone() method.
	* src/es/udc/santiago/model/facade/CashFlowService.java: Fixed a bug which could show movements out of period.
	* src/es/udc/santiago/view/cashflows/AddOperationActivity.java: UI control changes.
	* src/es/udc/santiago/view/cashflows/OverviewActivity.java: Added GBP currency.
	* src/es/udc/santiago/view/cashflows/ViewAllMovementsActivity.java: Time is not longer shown in date fields (only date).

2012-07-08	Santiago Munin <burning1@gmail.com>
	* AndroidManifest.xml: Fixed a comment.
	* src/es/udc/santiago/model/facade/CashFlowService.java: Now the yearly movements filter returns monthly movements x 12 (one per month)
	* src/es/udc/santiago/view/cashflows/OverviewActivity.java: Fixed the currency select.
	* src/es/udc/santiago/view/utils/ViewUtils.java: Improved cash printing.

2012-07-08	Santiago Munin <burning1@gmail.com>
	* res/raw/ormlite_config.txt: Deleted (unnecessary file).
	* src/es/udc/santiago/model/facade/CashFlowService.java: Fixed #4 (wrong query).
	* src/es/udc/santiago/view/cashflows/OverviewActivity.java: Now the data is refreshed onResume.

2012-07-08	Santiago Munin <burning1@gmail.com>